[project]
name = "comfyui-cre8it-nodes"
description = "Nodes:CRE8IT Serial Prompter, CRE8IT Apply Serial Prompter, CRE8IT Image Sizer. A few simple nodes to facilitate working wiht ComfyUI Workflows"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/DonBaronFactory/ComfyUI-Cre8it-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Cre8it-Nodes"
Icon = ""
